--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/adapter-better-sqlite3": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-bubble-menu": "^3.19.0",
     "@tiptap/extension-image": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
