--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,23 @@ services:
 
   nginx:
     image: nginx:alpine
+    command: >-
+      sh -c "apk add --no-cache openssl >/dev/null && \
+      if [ ! -f /etc/nginx/certs/server.key ] || [ ! -f /etc/nginx/certs/server.crt ]; then \
+        echo 'Generating self-signed certificate...'; \
+        mkdir -p /etc/nginx/certs && \
+        openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+          -keyout /etc/nginx/certs/server.key \
+          -out /etc/nginx/certs/server.crt \
+          -subj "/C=US/ST=State/L=City/O=Pesky/CN=localhost"; \
+      fi; \
+      nginx -g 'daemon off;'"
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/nginx/certs:ro
+      - ./certs:/etc/nginx/certs
     depends_on:
       - app
     restart: always
