--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 services:
   app:
     build: .
+    command: >-
+      sh -c "npx prisma db push && node .output/server/index.mjs"
     environment:
-      - DATABASE_URL=${DATABASE_URL:-file:./dev.db}
+      - DATABASE_URL=${DATABASE_URL:-file:./data/dev.db}
       - JWT_SECRET=${JWT_SECRET:-changethis}
       - DISABLE_EMAIL_CONFIRMATION=${DISABLE_EMAIL_CONFIRMATION:-true}
     volumes:
       - ./prisma:/app/prisma
+      - sqlite_data:/app/data
     restart: always
 
   nginx:
@@ -31,3 +34,6 @@ services:
     depends_on:
       - app
     restart: always
+
+volumes:
+  sqlite_data:
