--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - JWT_SECRET=${JWT_SECRET:-changethis}
       - DISABLE_EMAIL_CONFIRMATION=${DISABLE_EMAIL_CONFIRMATION:-true}
     volumes:
-      - ./prisma:/app/prisma
+      - ./prisma:/app/data
       - sqlite_data:/app/data
     restart: always
 
