--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL="file:./dev.db"
-JWT_SECRET="changethis"
-DISABLE_EMAIL_CONFIRMATION="true"
+DATABASE_URL=./data/dev.db
+JWT_SECRET=changethis
+DISABLE_EMAIL_CONFIRMATION=true
