--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start:collab": "tsx server/collaboration.ts"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/typography": "^0.5.19",
-    "@tiptap/extension-bubble-menu": "^3.19.0",
-    "@tiptap/extension-image": "^3.19.0",
-    "@tiptap/extension-link": "^3.19.0",
-    "@tiptap/extension-placeholder": "^3.19.0",
-    "@tiptap/starter-kit": "^3.19.0",
-    "@tiptap/vue-3": "^3.19.0",
+    "@tiptap/extension-bubble-menu": "3.20.0",
+    "@tiptap/extension-image": "3.20.0",
+    "@tiptap/extension-link": "3.20.0",
+    "@tiptap/extension-placeholder": "3.20.0",
+    "@tiptap/starter-kit": "3.20.0",
+    "@tiptap/vue-3": "3.20.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
@@ -30,6 +31,11 @@
     "pinia": "^3.0.4",
     "tailwind-merge": "^3.4.1",
     "vue": "^3.5.28",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "yjs": "^13.6.14",
+    "@hocuspocus/server": "3.4.4",
+    "@hocuspocus/provider": "3.4.4",
+    "@tiptap/extension-collaboration": "3.20.0",
+    "tsx": "^4.7.1"
   }
 }
