--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "start:collab": "tsx server/collaboration.ts"
   },
   "dependencies": {
+    "@hocuspocus/provider": "3.4.4",
+    "@hocuspocus/server": "3.4.4",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-bubble-menu": "3.20.0",
+    "@tiptap/extension-collaboration": "3.20.0",
     "@tiptap/extension-image": "3.20.0",
     "@tiptap/extension-link": "3.20.0",
     "@tiptap/extension-placeholder": "3.20.0",
@@ -32,10 +35,6 @@
     "tailwind-merge": "^3.4.1",
     "vue": "^3.5.28",
     "vue-router": "^4.6.4",
-    "yjs": "^13.6.14",
-    "@hocuspocus/server": "3.4.4",
-    "@hocuspocus/provider": "3.4.4",
-    "@tiptap/extension-collaboration": "3.20.0",
-    "tsx": "^4.7.1"
+    "yjs": "^13.6.14"
   }
 }
