--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,21 @@ http {
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
 
+        # Allow larger uploads (images, etc.)
+        client_max_body_size 50m;
+
+        # WebSocket proxy for the Hocuspocus collaboration server.
+        # The frontend connects to wss://<host>/ws/ so that the browser
+        # never needs to open a plain-text ws:// connection from an HTTPS page.
+        location /ws/ {
+            proxy_pass          http://collaboration:1234/;
+            proxy_http_version  1.1;
+            proxy_set_header    Upgrade $http_upgrade;
+            proxy_set_header    Connection 'upgrade';
+            proxy_set_header    Host $host;
+            proxy_cache_bypass  $http_upgrade;
+        }
+
         location / {
             proxy_pass          http://app:3000;
             proxy_http_version  1.1;
