--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certs:/etc/nginx/certs
+      - ./public/uploads:/usr/share/nginx/html/uploads:ro
     depends_on:
       - app
       - collaboration
