--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,16 @@ http {
             proxy_cache_bypass  $http_upgrade;
         }
 
+        # Serve uploaded assets directly from the shared volume
+        location /uploads/ {
+            alias /usr/share/nginx/html/uploads/;
+            autoindex off;
+            try_files $uri =404;
+            # Add basic cache headers; adjust max-age as needed
+            expires 7d;
+            add_header Cache-Control "public";
+        }
+
         location / {
             proxy_pass          http://app:3000;
             proxy_http_version  1.1;
