--- a/nginx.conf
+++ b/nginx.conf
@@ -50,6 +50,22 @@ http {
             proxy_set_header    Connection 'upgrade';
             proxy_set_header    Host $host;
             proxy_cache_bypass  $http_upgrade;
+            proxy_set_header    X-Real-IP $remote_addr;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    X-Forwarded-Proto $scheme;
+        }
+
+        # Also handle /ws without trailing slash for WebSocket connections
+        location /ws {
+            proxy_pass          http://collaboration:1234/;
+            proxy_http_version  1.1;
+            proxy_set_header    Upgrade $http_upgrade;
+            proxy_set_header    Connection 'upgrade';
+            proxy_set_header    Host $host;
+            proxy_cache_bypass  $http_upgrade;
+            proxy_set_header    X-Real-IP $remote_addr;
+            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header    X-Forwarded-Proto $scheme;
         }
 
         # Serve uploaded assets directly from the shared volume
