--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,23 @@ services:
   app:
     build: .
     environment:
-      - DATABASE_URL=${DATABASE_URL:-file:./dev.db}
+      - DATABASE_URL=${DATABASE_URL:-file:/app/data/dev.db}
       - JWT_SECRET=${JWT_SECRET:-changethis}
       - DISABLE_EMAIL_CONFIRMATION=${DISABLE_EMAIL_CONFIRMATION:-true}
-    # volumes:
-    #   - .:/app
-    #   - /app/node_modules
+    volumes:
+      - ./data:/app/data
+      - ./uploads:/app/public/uploads
     restart: always
 
   collaboration:
     build: .
     command: npm run start:collab
     environment:
-      - DATABASE_URL=${DATABASE_URL:-file:./dev.db}
+      - DATABASE_URL=${DATABASE_URL:-file:/app/data/dev.db}
     ports:
       - "1234:1234"
-    # volumes:
-    #   - .:/app
-    #   - /app/node_modules
+    volumes:
+      - ./data:/app/data
     restart: always
 
   nginx:
